# gamlss-curve-optimization

./: Dockerfile  LICENSE  Makefile  README.md  pyproject.toml
growth_curves/: generate_output_report.py  growth_curves_defaultsmoothing.R  growth_curves_selectmodels.R  main.py
setup/: install_r.py
tests/: test_growth_curves.py
tests/data/: HSC_Normals_Biomarkers_FINAL.xlsx  HSC_Normals_Biomarkers_FINAL_cleaned.xlsx  HSC_Tumour_Biomarkers_FINAL.xlsx  HSC_Tumour_Biomarkers_FINAL_cleaned.xlsx
tests/test_output_hsc/: results.pkl
tests/test_output_ondri/: results.pkl
